Fix spacing issues, begin 'Hire Adi' page

--- a/src/sass/swiper_carousel.scss
+++ b/src/sass/swiper_carousel.scss
@@ -1,5 +1,6 @@
 .swiper {
   width: 100%;
+  z-index: 0;
 }
 
 .swiper-slide {
